[package]
name = "horton-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
anyhow = "1.0.75"
regex = "1.5.4"
thiserror = "1.0"
tokio = { version = "1.16", features = ["full"] }
futures = "0.3"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.2.0"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
lopdf = "0.26.0"
beef = { version = "0.5.1", features = ["impl_serde"] }
fast-socks5 = { version = "0.9.1" }
futures-util = { version = "0.3.14", default-features = false, features = ["alloc"]}
serde = "1"
tokio-util = { version = "0.7", features = ["compat"]}
pin-project = { version = "1" }
jsonrpsee = { version = "0.21.0", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
jsonrpsee-types = { version = "0.21.0" }
jsonrpsee-core = { version = "0.21.0" }
jsonrpsee-server = { version = "0.21.0" }
jsonrpsee-ws-client = { version = "0.21.0" }
jsonrpsee-http-client = { version = "0.21.0" }
jsonrpsee-wasm-client = { version = "0.21.0" }
jsonrpsee-client-transport = { version = "0.21.0" }
jsonrpsee-proc-macros = { version = "0.21.0" }

[[bin]]
name = "rpc"
path = "src/main.rs"
